--- a/templates/index.html
+++ b/templates/index.html
@@ -155,6 +155,7 @@ margin:auto;
   <span id="progress" style="display: none;">PROGRESS BAR</span>
   <!--<p><br><progress id="progressbar" value="0" max="1000"></progress></p>-->
 <p><a href=# id="calculate" onclick="$('#progress').css('display', 'block'); loadProgressBar();">calculate server side</a>
+<p><a href="/up" id="drum">calculate server side</a>
 <div id="table"><table></table></div>
 <div id="result1"><span id="result">?</span></div>
 </div>
