--- a/templates/index.html
+++ b/templates/index.html
@@ -146,7 +146,7 @@ margin:auto;
   <p>url</p>
   <input type="text" size="20" name="url" value="http://toyota-axsel.com"> <br>
   <p>word1</p>
-  <input type="text" size="10" name="word1" value="price"> <br>
+  <input type="text" size="10" name="word1"> <br>
   <p>word2</p>
   <input type="text" size="10" name="word2"> <br>
   <p>word3</p>
